# gymmini

./: .gitignore  LICENSE  main.py  pyproject.toml  technical_task.md
alembic/: env.py
alembic/versions/: b635e55da9d3_initial_migration.py
docs/: agent_prompt.md  architecture.md
src/api/: main.py
src/bot/: handlers.py  messages.py
src/core/: config.py
src/db/: database.py
src/models/: __init__.py  exercise.py  user.py  workout.py
src/services/: exercise.py  user.py  workout.py
tests/: conftest.py  test_services.py
