[project]
name = "gymmini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.30.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]